--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -6,5 +6,6 @@
 
     <body>
         <h1>Carbonara Recipe</h1>
+        <img src="recipes/Carbonara_6a.webp" alt="Carbonara image">
     </body>
 </htmml>
