Add ingredients and cooking method paragtaphs

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -7,5 +7,18 @@
     <body>
         <h1>Carbonara Recipe</h1>
         <img src="recipes/Carbonara_6a.webp" alt="Carbonara image">
+        <h4>Ingredients:</h4>
+        <p>Spaghetti 150 g</p>
+        <p>2 rashes of smoked bacon</p>
+        <p>2 eggs</p>
+        <p>30 g Parmesan chees, plus extra for grating</p>
+        <p>Garlic and black pepper</p>
+        <h4>What we need to do:</h4>
+        <p>Cook pasta in boiling and salted water</p>
+        <p>Chop the bacon and cold pan over medium heat, add black pepper and garlic</p>
+        <p>Beat the eggs and add in grated parmesan, mix well</p>
+        <p>Turn off the heat, add pasta into the pan with bacon and splash little bit of pasta water into the pan</p>
+        <p>Pour egg and parmesan mix into the pant and mix well</p>
+        <p>Serve Carbonara on a plate and grate Parmesan on top</p>
     </body>
 </htmml>
