Fixed typos in words

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Carbonara Recipe</h1>
-        <img src="recipes/Espaguetis_carbonara.jpg" alt="Carbonara image">
+        <img src="./Espaguetis_carbonara.jpg" alt="Carbonara image" height="500">
         <h4>Ingredients:</h4>
         <ul>
             <li>Spaghetti 150 g</li>
@@ -16,8 +16,8 @@
         </ul>
         <h4>Steps:</h4>
         <ol>
-            <li>Cook pasta in boiling and salter water</li>
-            <li>Chop the bacon and add in a cold pan over medium heat, add garlic and black pepper</li>
+            <li>Cook pasta in boiling and salted water</li>
+            <li>Chop the bacon and add on a cold pan over medium heat, add garlic and black pepper</li>
             <li>Beat the eggs and add in grated Parmesan, mix well</li>
             <li>Turn off the heat, add pasta into the pan with bacon and splash little bit of pasta water into the pan</li>
             <li>Pour egg and parmesan mix into the pan and mix well</li>
