added some more recipes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/carbonara.html">Carbonara Recipe</a>
+        <ul>
+            <li><a href="recipes/carbonara.html">Carbonara Recipe</a></li>
+            <li><a href="recipes/vegan-burrito.html">Vegan Burrito Recipe</a></li>
+            <li><a href="recipes/rice-tofu.html">Rice and Sweet Chilli Tofu Recipe</a></li>
+        </ul>
     </body>
 </html>
