--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li><a href="recipes/carbonara.html">Carbonara Recipe</a></li>
             <li><a href="recipes/vegan-burrito.html">Vegan Burrito Recipe</a></li>
-            <li><a href="recipes/rice-tofu.html">Rice and Sweet Chilli Tofu Recipe</a></li>
+            <li><a href="recipes/sweet-chilli-tofu.html">Sweet Chilli Tofu Recipe</a></li>
         </ul>
     </body>
 </html>
