--- a/recipes/sweet-chilli-tofu.html
+++ b/recipes/sweet-chilli-tofu.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Sweet Chilli Tofu Recipe</h1>
-        <img src="./" alt="Sweet Chilli Tofu" height="500">
+        <img src="./Sweet-Chili-Tofu-2.jpg" alt="Sweet Chilli Tofu" height="600">
         <h4>Ingredients for Tofu:</h4>
         <ul>
             <li>1 Block Extra Firm Tofu</li>
