add ingredients and steps

--- a/recipes/vegan-burrito.html
+++ b/recipes/vegan-burrito.html
@@ -4,24 +4,38 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Carbonara Recipe</h1>
-        <img src="./Espaguetis_carbonara.jpg" alt="Vegan Burrito" height="500">
+        <h1>Vegan Burrito Recipe</h1>
+        <img src="./" alt="Vegan Burrito" height="500">
         <h4>Ingredients:</h4>
         <ul>
-            <li>Spaghetti 150 g</li>
-            <li>2 rashes of smoked bacon</li>
-            <li>2 eggs</li>
-            <li>30 g Parmesan cheese, plus extra for grating</li>
-            <li>Black pepper, garlic</li>
+            <li>4 large tortilla wraps</li>
+            <li>2 large handfuls spinach leaves, shredded</li>
+            <li>1 avocado, thinly sliced (optional)</li>
+            <li>hot sauce, to serve</li>
+        </ul>
+        <h4>Ingredients for Chipotle Black Beans:</h4>
+        <ul>
+            <li>1 tbsp oil</li>
+            <li>1 garlic clove, crushed</li>
+            <li>1 tbsp chipotle paste</li>
+            <li>400g can chopped tomatoes</li>
+            <li>400g black beans, drained</li>
+            <li>1 bunch coriander, chopped</li>
+        </ul>
+        <h4>Ingredients for Lime and Red Onion Rice:</h4>
+        <ul>
+            <li>250g wholegrain rice, cooked and drained</li>
+            <li>1 lime, juiced</li>
+            <li>½ red onion, very finely chopped</li>
+            <li>50g hazelnuts, roughly chopped</li>
         </ul>
         <h4>Steps:</h4>
         <ol>
-            <li>Cook pasta in boiling and salted water</li>
-            <li>Chop the bacon and add on a cold pan over medium heat, add garlic and black pepper</li>
-            <li>Beat the eggs and add in grated Parmesan, mix well</li>
-            <li>Turn off the heat, add pasta into the pan with bacon and splash little bit of pasta water into the pan</li>
-            <li>Pour egg and parmesan mix into the pan and mix well</li>
-            <li>Serve Carbonara on a plate, grate parmesan on top</li>
+            <li>To make the beans, heat the oil in a pan and fry the garlic for a minute, then stir in the chipotle paste.</li>
+            <li>Tip in the tomatoes, stir and bring to a simmer. Season with salt. Simmer until thick, add the beans and cook briefly (make sure any water gets cooked off), then stir in the coriander.</li>
+            <li>If you are using cold cooked rice, then warm it through, stir in the lime juice, red onion and nuts and season well.</li>
+            <li>Lay out the tortillas and sprinkle over some spinach, add some avocado slices and some rice, then top with the bean mix.</li>
+            <li>Roll the bottom up, then fold the sides in to stop the filling falling out as you roll. Wrap tightly in foil, if you like, and cut in half.</li>
         </ol>
     </body>
 </htmml>
