--- a/recipes/vegan-burrito.html
+++ b/recipes/vegan-burrito.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Vegan Burrito Recipe</h1>
-        <img src="./" alt="Vegan Burrito" height="500">
+        <img src="./vegan-burrito.jpg" alt="Vegan Burrito" height="500">
         <h4>Ingredients:</h4>
         <ul>
             <li>4 large tortilla wraps</li>
