--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>The Odin Recipes</h1>
         <ul>
             <li><a href="recipes/carbonara.html">Carbonara Recipe</a></li>
             <li><a href="recipes/vegan-burrito.html">Vegan Burrito Recipe</a></li>
