--- a/recipes/vegan-burrito.html
+++ b/recipes/vegan-burrito.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<htmml lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
     </head>
     <body>
         <h1>Vegan Burrito Recipe</h1>
         <img src="./vegan-burrito.jpg" alt="Vegan Burrito" height="500">
-        <h4>Ingredients:</h4>
+        <link rel="stylesheet" href="styles.css">
+        <div>
+            <h3>Ingredients:</h3>
         <ul>
             <li>4 large tortilla wraps</li>
             <li>2 large handfuls spinach leaves, shredded</li>
             <li>1 avocado, thinly sliced (optional)</li>
             <li>hot sauce, to serve</li>
         </ul>
-        <h4>Ingredients for Chipotle Black Beans:</h4>
+        <h3>Ingredients for Chipotle Black Beans:</h3>
         <ul>
             <li>1 tbsp oil</li>
             <li>1 garlic clove, crushed</li>
@@ -22,14 +24,14 @@
             <li>400g black beans, drained</li>
             <li>1 bunch coriander, chopped</li>
         </ul>
-        <h4>Ingredients for Lime and Red Onion Rice:</h4>
+        <h3>Ingredients for Lime and Red Onion Rice:</h3>
         <ul>
             <li>250g wholegrain rice, cooked and drained</li>
             <li>1 lime, juiced</li>
             <li>½ red onion, very finely chopped</li>
             <li>50g hazelnuts, roughly chopped</li>
         </ul>
-        <h4>Steps:</h4>
+        <h3>Steps:</h3>
         <ol>
             <li>To make the beans, heat the oil in a pan and fry the garlic for a minute, then stir in the chipotle paste.</li>
             <li>Tip in the tomatoes, stir and bring to a simmer. Season with salt. Simmer until thick, add the beans and cook briefly (make sure any water gets cooked off), then stir in the coriander.</li>
@@ -37,5 +39,6 @@
             <li>Lay out the tortillas and sprinkle over some spinach, add some avocado slices and some rice, then top with the bean mix.</li>
             <li>Roll the bottom up, then fold the sides in to stop the filling falling out as you roll. Wrap tightly in foil, if you like, and cut in half.</li>
         </ol>
+        </div>
     </body>
-</htmml>
+</html>
